<resources>
    <string name="app_name">Dictionary</string>
    <string name="tvHeadMAc">Dictionary</string>
    <string name="btnAddNewWord">Add new word</string>
    <string name="btnViewDictionary">View dictionary</string>
    <string name="btnLearnWords">Learn Words</string>
    <string name="edHintRussianANWAc">Word</string>
    <string name="edHintHebrewANWAc">Translation</string>
    <string name="edHintRussianEWAc">Word</string>
    <string name="edHintHebrewEWAc">Translation</string>
    <string name="edHintTranscriptionEWAc">Transcription</string>
    <string name="edHintTranscriptionANWAc">Transcription</string>
    <string name="tvHeadANWAc">New word</string>
    <string name="tvTitleChCoAc">Choose a couple</string>
    <string name="tvTitleWrInRuAc">Write in Russian</string>
    <string name="tvTitleWrInHeAc">Write in Hebrew</string>
    <string name="hintTransWrInRuAc">Translate write here.....</string>
    <string name="btnOkANWAc">OK</string>
    <string name="leftArrow">&lt;</string>
    <string name="rightArrow">&gt;</string>
    <string name="btnCancelANWAc">Cancel</string>
    <string name="tvHeadEWAc">Edit word</string>
    <string name="btnOkEWAc">OK</string>
    <string name="btnCancelEWAc">Cancel</string>
    <string name="btnDellVDRA">Kill</string>
    <string name="btnEditVDRA">Edit</string>
    <string name="edHintSearchWordVDAc">Serching...</string>
    <string name="item_export_db">Export DB</string>
    <string name="item_import_db">Import DB</string>
    <string name="item_export_to_csv">Export *.CSV</string>
    <string name="item_learn_words_count">Words count</string>
    <string name="item_learn_method">Method</string>
    <string name="title_activity_settings">Settings</string>
    <string name="btnSelectWordsLWAc">SelectWords</string>
    <string name="btnRandomWordsLWAc">RandomWords</string>

    <!-- Strings related to Settings -->

    <!-- Example Settings settings -->
    <string name="memory_switch_preference">memory permission</string>
    <string name="memory_summary">Доступ к памяти телефона</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="ok">OK</string>
    <string name="go">GO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
