<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".EditWordActivity">

    <TextView
        android:id="@+id/tvHeadEWAc"
        style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/unkempt"
        android:text="@string/tvHeadEWAc"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edRussianEWAc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edHintRussianEWAc"
            android:inputType="text"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="GenderW"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spGenderRusEWAc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edHebrewEWAc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edHintHebrewEWAc"
            android:inputType="text"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="GenderT"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spGenderHebEWAc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edTranscriptionEWAc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edHintTranscriptionEWAc"
            android:inputType="text"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Quantity"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spQuantityEWAc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sentence meaning"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spMeaningEWAc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOkEWAc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btnOkEWAc" />

        <Button
            android:id="@+id/btnCancelEWAc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btnCancelEWAc" />
    </LinearLayout>
</LinearLayout>